--- a/src/openforms/js/lang/nl.json
+++ b/src/openforms/js/lang/nl.json
@@ -69,6 +69,11 @@
     "description": "Case type option label",
     "originalDefault": "{description} {isPublished, select, false {<draft>(not published)</draft>} other {}}"
   },
+  "01mWK2": {
+    "defaultMessage": "The format(s) of the attachment(s) containing the submission details",
+    "description": "Email registration options 'attachmentFormats' label",
+    "originalDefault": "The format(s) of the attachment(s) containing the submission details"
+  },
   "0M2B7B": {
     "defaultMessage": "DMN-variabele",
     "description": "DMN variable label",
@@ -139,6 +144,11 @@
     "description": "ZGW APIs registration options 'organisationRSIN' help text",
     "originalDefault": "RSIN of the organization, which creates and owns the case and documents."
   },
+  "1z/bNS": {
+    "defaultMessage": "Zds zaaktype code",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeCode' label",
+    "originalDefault": "Zds zaaktype code"
+  },
   "20K9To": {
     "defaultMessage": "Servicebevraging instellen",
     "description": "Service fetch configuration selection modal title",
@@ -153,6 +163,11 @@
     "defaultMessage": "Getal (number)",
     "description": "JSON variable type \"number\" representation",
     "originalDefault": "Number"
+  },
+  "2P7mDI": {
+    "defaultMessage": "Content of the registration email message (as text).",
+    "description": "Email registration options 'emailContentTemplateText' helpText",
+    "originalDefault": "Content of the registration email message (as text)."
   },
   "2Z/hNo": {
     "defaultMessage": "Type",
@@ -199,6 +214,11 @@
     "defaultMessage": "Vraag verklaring invullen naar waarheid",
     "description": "Form askStatementOfTruth field label",
     "originalDefault": "Ask statement of truth"
+  },
+  "3baawY": {
+    "defaultMessage": "StUF-ZDS name",
+    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping stufName' label",
+    "originalDefault": "StUF-ZDS name"
   },
   "3z1hhJ": {
     "defaultMessage": "Toon/verberg JSON Schema",
@@ -342,6 +362,11 @@
     "description": "Form step next text label",
     "originalDefault": "Next text"
   },
+  "7ZdEaP": {
+    "defaultMessage": "Documenttype description for newly created zaken in StUF-ZDS",
+    "description": "StUF-ZDS registration options 'zdsDocumenttypeOmschrijvingInzending' helpText",
+    "originalDefault": "Documenttype description for newly created zaken in StUF-ZDS"
+  },
   "7cfkp6": {
     "defaultMessage": "Verwachte invoer-expressies",
     "description": "DMN input expressions title",
@@ -357,6 +382,11 @@
     "description": "Variable table registration title",
     "originalDefault": "Registration"
   },
+  "7hc31v": {
+    "defaultMessage": "The email addresses to which the payment status update will be sent (defaults to general registration addresses)",
+    "description": "Email registration options 'paymentEmails' label",
+    "originalDefault": "The email addresses to which the payment status update will be sent (defaults to general registration addresses)"
+  },
   "833GAg": {
     "defaultMessage": "Invoerparameters",
     "description": "Input mapping title",
@@ -366,6 +396,11 @@
     "defaultMessage": "Is herbruikbaar?",
     "description": "Form step is reusable label",
     "originalDefault": "Is reusable?"
+  },
+  "8IItwi": {
+    "defaultMessage": "The name in StUF-ZDS to which the form variable should be mapped",
+    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping stufName' helpText",
+    "originalDefault": "The name in StUF-ZDS to which the form variable should be mapped"
   },
   "8LLxRg": {
     "defaultMessage": "De tekst op de knop om de gegevens van de huidige stap op te slaan en het formulier te onderbreken. Laat dit veld leeg om de standaardinstelling te gebruiken.",
@@ -392,6 +427,11 @@
     "defaultMessage": "Component {label} ({key}) steunt op een niet-bestaande component key {missingKey} in de eenvoudige logica.",
     "description": "Wrong simple logic warning",
     "originalDefault": "Component {label} ({key}) uses a non-existent component key {missingKey} in the simple logic."
+  },
+  "8nY+h7": {
+    "defaultMessage": "Zaaktype description for newly created Zaken in StUF-ZDS",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeOmschrijving' helpText",
+    "originalDefault": "Zaaktype description for newly created Zaken in StUF-ZDS"
   },
   "8pemD3": {
     "defaultMessage": "Wijzig variabele {name}",
@@ -427,6 +467,11 @@
     "defaultMessage": "Let op! Als je een ander objecttype selecteert, dan worden de bestaande koppelingen gereset. Ben je zeker dat je door wil gaan?",
     "description": "Objects API registration options: warning message when changing the object type",
     "originalDefault": "Changing the objecttype will remove the existing variables mapping. Are you sure you want to continue?"
+  },
+  "9akVrT": {
+    "defaultMessage": "Zds documenttype omschrijving inzending",
+    "description": "StUF-ZDS registration options 'zdsDocumenttypeOmschrijvingInzending' label",
+    "originalDefault": "Zds documenttype omschrijving inzending"
   },
   "9bGp7h": {
     "defaultMessage": "Actief",
@@ -497,6 +542,11 @@
     "defaultMessage": "Bevestigen",
     "description": "Form definition select confirm button",
     "originalDefault": "Confirm"
+  },
+  "B5RSyi": {
+    "defaultMessage": "Email payment subject",
+    "description": "Email registration options 'emailPaymentSubject' label",
+    "originalDefault": "Email payment subject"
   },
   "BCjZNo": {
     "defaultMessage": "Veld waar het telefoonnummer voor een afspraak komt te staan",
@@ -578,6 +628,11 @@
     "defaultMessage": "Verwijderen",
     "description": "Delete icon title",
     "originalDefault": "Delete"
+  },
+  "CNJ2TT": {
+    "defaultMessage": "This mapping is used to map the variable keys to keys used in the XML that is sent to StUF-ZDS. Those keys and the values belonging to them in the submission data are included in extraElementen.",
+    "description": "StUF-ZDS registration paymentStatusUpdateMapping message",
+    "originalDefault": "This mapping is used to map the variable keys to keys used in the XML that is sent to StUF-ZDS. Those keys and the values belonging to them in the submission data are included in extraElementen."
   },
   "CXKQZZ": {
     "defaultMessage": "Bevestiging",
@@ -730,6 +785,11 @@
     "defaultMessage": "Er moet minstens één authenticatiemethode ingeschakeld zijn voor de mede-ondertekencomponent.",
     "description": "MissingAuthCosignWarning message",
     "originalDefault": "The co-sign component requires at least one authentication plugin to be enabled."
+  },
+  "FQ1JZc": {
+    "defaultMessage": "Zaaktype code for newly created Zaken in StUF-ZDS",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeCode' helpText",
+    "originalDefault": "Zaaktype code for newly created Zaken in StUF-ZDS"
   },
   "FQswyM": {
     "defaultMessage": "Modus",
@@ -911,6 +971,11 @@
     "description": "Decision definition ID label",
     "originalDefault": "Decision definition ID"
   },
+  "Ihbi6N": {
+    "defaultMessage": "Zaaktype status omschrijving for newly created zaken in StUF-ZDS",
+    "description": "StUF-ZDS registration options 'zdsZaakdocVertrouwelijkheid' helpText",
+    "originalDefault": "Zaaktype status omschrijving for newly created zaken in StUF-ZDS"
+  },
   "Ika4IH": {
     "defaultMessage": "Inzendingen worden permanent verwijderd",
     "description": "delete_permanently removal method option label",
@@ -1081,6 +1146,11 @@
     "description": "Add process variable button",
     "originalDefault": "Add variable"
   },
+  "LeVpdf": {
+    "defaultMessage": "Plugin configuration: Email",
+    "description": "Email registration options modal title",
+    "originalDefault": "Plugin configuration: Email"
+  },
   "LiXrER": {
     "defaultMessage": "De gekozen trigger-stap bestaat niet (meer) in het formulier. Gelieve deze te wijzigen.",
     "description": "Warning missing trigger step",
@@ -1240,6 +1310,11 @@
     "description": "data type datetime",
     "originalDefault": "Datetime"
   },
+  "P4JMHA": {
+    "defaultMessage": "Zaaktype status code for newly created zaken in StUF-ZDS",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeStatusCode' helpText",
+    "originalDefault": "Zaaktype status code for newly created zaken in StUF-ZDS"
+  },
   "PC7ICN": {
     "defaultMessage": "Ingeschakeld",
     "description": "Manage process vars enabled checkbox column title",
@@ -1259,6 +1334,11 @@
     "defaultMessage": "Regel toevoegen",
     "description": "Add form logic rule button",
     "originalDefault": "Add rule"
+  },
+  "PhN977": {
+    "defaultMessage": "Plugin configuration: StUF-ZDS",
+    "description": "StUF-ZDS registration options modal title",
+    "originalDefault": "Plugin configuration: StUF-ZDS"
   },
   "PiB6Y1": {
     "defaultMessage": "Tijd veld",
@@ -1306,6 +1386,11 @@
     "description": "option \"no_with_overview\" of \"submission_allowed\"",
     "originalDefault": "No (with overview page)"
   },
+  "QljfI7": {
+    "defaultMessage": "Email subject",
+    "description": "Email registration options 'emailSubject' label",
+    "originalDefault": "Email subject"
+  },
   "Qr2wnR": {
     "defaultMessage": "Betaalprovider backendopties",
     "description": "Payment backend options label",
@@ -1345,6 +1430,11 @@
     "defaultMessage": "Taal",
     "description": "Readable label for the language",
     "originalDefault": "Language"
+  },
+  "RjWycp": {
+    "defaultMessage": "Form variable",
+    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping formVariable' label",
+    "originalDefault": "Form variable"
   },
   "Rk13i+": {
     "defaultMessage": "Beginwaarde",
@@ -1517,6 +1607,11 @@
     "description": "Variable table sensitive data title",
     "originalDefault": "Sensitive data"
   },
+  "Vu09Ne": {
+    "defaultMessage": "Zds zaaktype status omschrijving",
+    "description": "StUF-ZDS registration options 'zdsZaakdocVertrouwelijkheid' label",
+    "originalDefault": "Zds zaaktype status omschrijving"
+  },
   "WHqkYA": {
     "defaultMessage": "Datum/tijd",
     "description": "Date/time column header",
@@ -1628,6 +1723,11 @@
     "defaultMessage": "Weet u zeker dat u dit wilt verwijderen?",
     "description": "Default delete confirmation message",
     "originalDefault": "Are you sure you want to delete this?"
+  },
+  "Z/wFhz": {
+    "defaultMessage": "Content of the registration email message (as html).",
+    "description": "Email registration options 'emailContentTemplateHtml' helpText",
+    "originalDefault": "Content of the registration email message (as html)."
   },
   "Z5lydZ": {
     "defaultMessage": "Introductiepagina",
@@ -1917,6 +2017,11 @@
     "description": "Logic rule advanced options icon title",
     "originalDefault": "Advanced options"
   },
+  "eO6MNT": {
+    "defaultMessage": "Zds zaaktype status code",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeStatusCode' label",
+    "originalDefault": "Zds zaaktype status code"
+  },
   "evbysh": {
     "defaultMessage": "Variabeledefinitie",
     "description": "Camunda complex variable definition title",
@@ -1926,6 +2031,11 @@
     "defaultMessage": "'Start' tekst",
     "description": "literals.beginText form label",
     "originalDefault": "Begin text"
+  },
+  "f8lihY": {
+    "defaultMessage": "Subject of the email sent to the registration backend. You can use the expressions '{{ form_name }}' and '{{ public_reference }}' to include the form name and the reference number to the submission in the subject.",
+    "description": "Email registration options 'emailSubject' helpText",
+    "originalDefault": "Subject of the email sent to the registration backend. You can use the expressions '{{ form_name }}' and '{{ public_reference }}' to include the form name and the reference number to the submission in the subject."
   },
   "f9Zr9D": {
     "defaultMessage": "Aantal dagen dat een sessie bewaard blijft. Laat leeg om de waarde van de algemene configuratie te gebruiken.",
@@ -1946,6 +2056,11 @@
     "defaultMessage": "Sleutel-waarde paar (object)",
     "description": "data type object",
     "originalDefault": "Object"
+  },
+  "ffvbQm": {
+    "defaultMessage": "payment status update variable mapping",
+    "description": "StUF-ZDS registration paymentStatusUpdateMapping label",
+    "originalDefault": "payment status update variable mapping"
   },
   "fpX4ei": {
     "defaultMessage": "Soort mappingexpressie",
@@ -1977,6 +2092,11 @@
     "description": "No service fetch configuration configured yet message",
     "originalDefault": "(not configured yet)"
   },
+  "gDAZQ1": {
+    "defaultMessage": "Zds zaaktype status omschrijving",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeStatusOmschrijving' label",
+    "originalDefault": "Zds zaaktype status omschrijving"
+  },
   "gGNIdG": {
     "defaultMessage": "De tekst op de overzichtspagina om naar de vorige stap terug te gaan. Laat dit veld leeg om de standaardinstelling te gebruiken.",
     "description": "literals.previousText help text",
@@ -2001,6 +2121,11 @@
     "defaultMessage": "Applicatieversie",
     "description": "App version column header",
     "originalDefault": "App version"
+  },
+  "gtjPWc": {
+    "defaultMessage": "The name of the form variable to be mapped",
+    "description": "StUF-ZDS registration options 'paymentStatusUpdateMapping formVariable' helpText",
+    "originalDefault": "The name of the form variable to be mapped"
   },
   "gz32s2": {
     "defaultMessage": "Indien gewenst, dan kunt u een alternatieve naam opgeven voor de procesvariabele.",
@@ -2036,6 +2161,16 @@
     "defaultMessage": "Registratiepluginoptie toevoegen",
     "description": "Button text to add registration backend",
     "originalDefault": "Add registration backend"
+  },
+  "hQ7xjd": {
+    "defaultMessage": "Zaaktype status omschrijving for newly created zaken in StUF-ZDS",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeStatusOmschrijving' helpText",
+    "originalDefault": "Zaaktype status omschrijving for newly created zaken in StUF-ZDS"
+  },
+  "hSvi+z": {
+    "defaultMessage": "Email content template text",
+    "description": "Email registration options 'emailContentTemplateText' label",
+    "originalDefault": "Email content template text"
   },
   "hWRRHx": {
     "defaultMessage": "Formulierontwerp",
@@ -2198,6 +2333,11 @@
     "description": "component property \"disabled\" label",
     "originalDefault": "disabled"
   },
+  "kWAxhF": {
+    "defaultMessage": "Subject of the email sent to the registration backend to notify a change in the payment status.",
+    "description": "Email registration options 'emailPaymentSubject' helpText",
+    "originalDefault": "Subject of the email sent to the registration backend to notify a change in the payment status."
+  },
   "klKZV5": {
     "defaultMessage": "Geeft aan of een bestaande record (verkregen van de eventuele voor-invulreferentie) bijgewerkt moet worden in plaats van een nieuw object aan te maken. Als er geen bestaand object is, dan wordt een nieuwe aangemaakt.",
     "description": "Objects API registration: updateExistingObject helpText",
@@ -2288,6 +2428,11 @@
     "description": "Logic trigger heading",
     "originalDefault": "Trigger condition"
   },
+  "nNbK3G": {
+    "defaultMessage": "Email content template HTML",
+    "description": "Email registration options 'emailContentTemplateHtml' label",
+    "originalDefault": "Email content template HTML"
+  },
   "neCqv9": {
     "defaultMessage": "Het registratieresultaat zal een object van dit type zijn.",
     "description": "Objects API registration options 'Objecttype' helpText",
@@ -2303,6 +2448,11 @@
     "description": "Form 'BRP Personen purpose limitation header value' field help text",
     "originalDefault": "The purpose limitation (\"doelbinding\") for queries to the BRP Persoon API."
   },
+  "o6Ju6l": {
+    "defaultMessage": "The email addresses to which the submission details will be sent",
+    "description": "Email registration options 'attachFilesToEmail' label",
+    "originalDefault": "The email addresses to which the submission details will be sent"
+  },
   "o8CfuS": {
     "defaultMessage": "Tekst (string)",
     "description": "JSON variable type \"string\" representation",
@@ -2312,6 +2462,11 @@
     "defaultMessage": "Opslaan",
     "description": "Save service fetch configuration button label",
     "originalDefault": "Save"
+  },
+  "oVwrVo": {
+    "defaultMessage": "Attach files to email",
+    "description": "Email registration options 'attachFilesToEmail' label",
+    "originalDefault": "Attach files to email"
   },
   "oYmpN5": {
     "defaultMessage": "Vink aan om de inhoud toe te voegen aan de PDF die mensen op het eind kunnen downloaden.",
@@ -2377,6 +2532,11 @@
     "defaultMessage": "Formulierdefinitie",
     "description": "Variable table form definition title",
     "originalDefault": "Form definition"
+  },
+  "ppZHsm": {
+    "defaultMessage": "Configure options",
+    "description": "Link label to open StUF-ZDS options modal",
+    "originalDefault": "Configure options"
   },
   "pqCru3": {
     "defaultMessage": "Servicebevraging:",
@@ -2482,6 +2642,11 @@
     "defaultMessage": "Vink aan om een bevestigingsmail te sturen naar de inzender(s) van het formulier.",
     "description": "Help text of form field 'Send the confirmation email'",
     "originalDefault": "Whether to send a confirmation email to the end-user who submitted the form."
+  },
+  "sNGN82": {
+    "defaultMessage": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit.",
+    "description": "Email registration options 'attachFilesToEmail' helpText",
+    "originalDefault": "Enable to attach file uploads to the registration email. If set, this overrides the global default. Form designers should take special care to ensure that the total file upload sizes do not exceed the email size limit."
   },
   "sptpzv": {
     "defaultMessage": "Let op! Migreren naar het nieuwe configuratieformaat maakt de bestaande JSON-sjablonen leeg. Daarnaast kan je het formulier pas opslaan als alle verplichte variabelen goed gekoppeld zijn. Ben je zeker dat je wil migreren?",
@@ -2693,6 +2858,11 @@
     "description": "Identifier role (for mandate context) label for authorizee",
     "originalDefault": "Authorizee"
   },
+  "yJiaOl": {
+    "defaultMessage": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }",
+    "description": "StUF-ZDS registration validation errors icon next to button",
+    "originalDefault": "{numErrors, plural, one {There is a validation error.} other {There are {numErrors} validation errors.} }"
+  },
   "yLt2lv": {
     "defaultMessage": "JSON-sjabloon voor de inhoud van het verzoek wat naar de Objecten-API gestuurd wordt.",
     "description": "Legacy objects API registration options: 'contentJSON' helpText",
@@ -2723,6 +2893,11 @@
     "defaultMessage": "Actie",
     "description": "Action column header",
     "originalDefault": "Action"
+  },
+  "z4zEf7": {
+    "defaultMessage": "Zds zaaktype omschrijving",
+    "description": "StUF-ZDS registration options 'zdsZaaktypeOmschrijving' label",
+    "originalDefault": "Zds zaaktype omschrijving"
   },
   "zGMQ75": {
     "defaultMessage": "Gebruikersvariabelen",
