--- a/src/openforms/js/lang/formio/nl.json
+++ b/src/openforms/js/lang/formio/nl.json
@@ -405,5 +405,6 @@
   "Verify": "Bevestigen",
   "You must verify this email address to continue.": "Om door te gaan moet je dit e-mailadres bevestigen.",
   "You must select at least {{minCount}} items.": "Zorg dat dit veld {{minCount}} of meer opties aangevinkt heeft.",
+  "Soft required errors": "Foutmeldingen aangeraden velden",
   "": ""
 }
